tdf#129306 SslSocket: handle EAGAIN properly.

Change-Id: I9fb3323b8d071fdc50399a67eb6b0aaeed9342b0
Reviewed-on: https://gerrit.libreoffice.org/c/online/+/84817
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>