net/Socket.hpp
@@ -794,7 +794,8 @@ public:
 
     ~StreamSocket()
     {
-        LOG_DBG("StreamSocket dtor #" << getFD());
+        LOG_DBG("StreamSocket dtor #" << getFD() << " with pending "
+                "write: " << _outBuffer.size() << ", read: " << _inBuffer.size());
 
         if (!_closed)
         {
